--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "canvasjs": "^1.8.3",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
